--- a/Java/Java基础/3. 方法.md
+++ b/Java/Java基础/3. 方法.md
@@ -44,9 +44,9 @@ public static void method() {
 
 ### **方法重载**
 
-- 方法重载：指在同一个类中，允许存在一个以上的同名方法，只要它们的参数列表不同即可，与修饰符和返回值类型无关。 
-- 参数列表：个数不同，数据类型不同，顺序不同。 
-- 重载方法调用：JVM通过方法的参数列表，调用不同的方法。
+- 方法重载：指在同一个类中，允许存在一个以上的同名方法，只要它们的参数列表不同即可，与修饰符和返回值类型无关
+- 参数列表：个数不同，数据类型不同，顺序不同
+- 重载方法调用：JVM通过方法的参数列表，调用不同的方法
 
 <img src="https://palepics.oss-cn-guangzhou.aliyuncs.com/img/image-20240223231458512.png" style="zoom: 67%;" />
 
@@ -89,6 +89,8 @@ public static void method() {
 - 重写是子类重新定义父类已经存在的方法，方法签名必须相同。
 - 重载是在编译时发生的，而重写是在运行时发生的。
 - 重载不涉及继承，而重写涉及子类覆盖父类的方法。
+
+
 
 
 
