--- a/Java/Java多并发/锁.md
+++ b/Java/Java多并发/锁.md
@@ -6,13 +6,13 @@
 
 **如何保证内存可见性的?**
 
-Java的内存模型中，每个线程会有一个私有本地内存的抽象概念，正常情况下线程操作普通共享变量时都会在本地内存修改和读取，那就导致别的线程感知不到，出现可见性问题。而当一个共享变量被volatile修饰时，它会保证修改的值会立即被更新到主内存，当有其他线程需要读取时，它也会去主内存中读取新值。这样就解决的可见性问题。
+Java的内存模型中，每个线程会有一个私有本地内存的抽象概念，正常情况下线程操作普通共享变量时都会在本地内存修改和读取，那就导致别的线程感知不到，出现可见性问题。而当一个共享变量被volatile修饰时，它会保证修改的值会立即被更新到主内存，**当有其他线程需要读取时，它也会去主内存中读取新值。这样就解决的可见性问题。**
 
-![JMM(Java 内存模型)](https://oss.javaguide.cn/github/javaguide/java/concurrent/jmm.png)
+<img src="https://oss.javaguide.cn/github/javaguide/java/concurrent/jmm.png" alt="JMM(Java 内存模型)" style="zoom: 67%;" />
 
 JMM(Java 内存模型)
 
-![JMM(Java 内存模型)强制在主存中进行读取](https://oss.javaguide.cn/github/javaguide/java/concurrent/jmm2.png)
+<img src="https://oss.javaguide.cn/github/javaguide/java/concurrent/jmm2.png" alt="JMM(Java 内存模型)强制在主存中进行读取" style="zoom: 67%;" />
 
 JMM(Java 内存模型)强制在内存中进行读取
 
@@ -452,15 +452,13 @@ public ReentrantLock(boolean fair) {
 
 ### **synchronized 和 ReentrantLock 有什么区别？**
 
-两者都是可重入锁
+#### **两者都是可重入锁**
 
 **可重入锁** 也叫递归锁，指的是线程可以再次获取自己的内部锁。比如一个线程获得了某个对象的锁，此时这个对象锁还没有释放，当其再次想要获取这个对象的锁的时候还是可以获取的，如果是不可重入锁的话，就会造成死锁。
 
 JDK 提供的所有现成的 `Lock` 实现类，包括 `synchronized` 关键字锁都是可重入的。
 
 在下面的代码中，`method1()` 和 `method2()`都被 `synchronized` 关键字修饰，`method1()`调用了`method2()`。
-
-
 
 ```java
 public class SynchronizedDemo {
@@ -479,15 +477,15 @@ public class SynchronizedDemo {
 
 
 
-**synchronized 依赖于 JVM 而 ReentrantLock 依赖于 API**
+#### **synchronized 依赖于 JVM 而 ReentrantLock 依赖于 API**
 
 `synchronized` 是依赖于 JVM 实现的，前面我们也讲到了 虚拟机团队在 JDK1.6 为 `synchronized` 关键字进行了很多优化，但是这些优化都是在虚拟机层面实现的，并没有直接暴露给我们。
 
-`ReentrantLock` 是 JDK 层面实现的（也就是 API 层面，需要 lock() 和 unlock() 方法配合 try/finally 语句块来完成），所以我们可以通过查看它的源代码，来看它是如何实现的。
+`ReentrantLock` 是 JDK 层面实现的（**也就是 API 层面，需要 lock() 和 unlock() 方法配合 try/finally 语句块来完成**），所以我们可以通过查看它的源代码，来看它是如何实现的。
 
 
 
- **ReentrantLock 比 synchronized 增加了一些高级功能**
+####  **ReentrantLock 比 synchronized 增加了一些高级功能**
 
 相比`synchronized`，`ReentrantLock`增加了一些高级功能。主要来说主要有三点：
 
@@ -499,10 +497,20 @@ public class SynchronizedDemo {
 
 
 
+#### **性能的区别**
+
+在Synchronized优化以前，synchronized的性能是比ReenTrantLock差很多的，但是自从Synchronized引入了偏向锁，轻量级锁（自旋锁）后，两者的性能就差不多了，在两种方法都可用的情况下，官方甚至建议使用synchronized，其实synchronized的优化我感觉就借鉴了ReenTrantLock中的CAS技术。都是试图在用户态就把加锁问题解决，避免进入内核态的线程阻塞。
+
+
+
+
+
 ### **可中断锁和不可中断锁有什么区别？**
 
 - **可中断锁**：获取锁的过程中可以被中断，不需要一直等到获取锁之后才能进行其他逻辑处理。`ReentrantLock` 就属于是可中断锁。
 - **不可中断锁**：一旦线程申请了锁，就只能等到拿到锁以后才能进行其他的逻辑处理。 `synchronized` 就属于是不可中断锁。
+
+
 
 
 
