--- a/Java/Java常用类/2. String类.md
+++ b/Java/Java常用类/2. String类.md
@@ -12,7 +12,7 @@
 
   
 
-#### **String 为什么是不可变的?**
+### **String 为什么是不可变的?**
 
 ~~`String` 类中使用 `final` 关键字修饰字符数组来保存字符串，所以`String` 对象是不可变的。~~
 
@@ -34,7 +34,7 @@ String类final + char[] private
 
 
 
-#### **字符串常量池**
+### **字符串常量池**
 
 程序当中直接写上的双引号字符串，就在字符串常量池中，**只有用""创造的字符串，才创建在常量池中**
 
@@ -76,7 +76,7 @@ s2 指向的就是驻留在字符串常量池的 stringobject2，因此 s2=="Hyd
 
 
 
-#### **String的intern 方法有什么作用?**
+### **String的intern 方法有什么作用?**
 
  `String.intern()` 是一个 native（本地）方法，其作用是将指定的字符串对象的引用保存在字符串常量池中，可以简单分为两种情况：
 
@@ -107,7 +107,7 @@ System.out.println(s1 == s4); //true
 
 
 
-#### **String s1 = new String("abc"); 这句话创建了几个字符串对象？**
+### **String s1 = new String("abc"); 这句话创建了几个字符串对象？**
 
 会创建 1 或 2 个字符串对象。
 
@@ -146,7 +146,7 @@ String s2 = new String("abc");
 
 
 
-#### **String 类型的变量和常量做“+”运算时发生了什么？**
+### **String 类型的变量和常量做“+”运算时发生了什么？**
 
 先来看字符串不加 `final` 关键字拼接的情况（JDK1.8）：
 
@@ -312,9 +312,9 @@ System.out.println(result); //-18,A的ASCII是65,S的ASCII是83
 
 
 
-#### **String的相关方法**
+### **String的相关方法**
 
-##### **String的构造方法**
+#### **String的构造方法**
 
 ```java
 String s1 = new String();
@@ -330,7 +330,7 @@ String s5 = new String(byte[] b)
 
  
 
-##### **String中与获取相关方法**
+#### **String中与获取相关方法**
 
 **public int length()**：获取字符串当中含有的字符个数，拿到字符串长度
 
@@ -376,7 +376,7 @@ System.out.println("HelloWorld".indexOf("abc")); // -1
 
  
 
-##### **String中与截取相关方法**
+#### **String中与截取相关方法**
 
 **public String substring(int index)**：截取从参数位置一直到字符串末尾，返回新字符串
 
@@ -409,9 +409,7 @@ System.out.println(str3); // oWo
 
 
 
-##### **String的比较**
-
-
+#### **String的比较**
 
 返回值是整型，它是先比较对应字符的大小(ASCII码顺序)，如果第一个字符和参数的第一个字符不等，结束比较，返回他们之间的长度**差值**，如果第一个字符和参数的第一个字符相等，则以第二个字符和参数的第二个字符做比较，以此类推,直至比较的字符或被比较的字符有一方结束。
 
@@ -459,7 +457,7 @@ public class Test {
 
 
 
-##### **String中与数组转换相关方法**
+#### **String中与数组转换相关方法**
 
 **public char[] toCharArray()**：将当前字符串拆分成为字符数组作为返回值
 
@@ -496,7 +494,7 @@ for (int i = 0; i < bytes.length; i++) {
 
 
 
-##### **String中分割与替换**
+#### **String中分割与替换**
 
 **public String replace(CharSequence oldString, CharSequence newString)**：
 
@@ -538,7 +536,7 @@ split方法的参数其实是一个“正则表达式”
 
  
 
-##### **String的格式化**
+#### **String的格式化**
 
 **public static String format(String format,Object... args)：**使用指定的格式字符串和参数返回一个格式化字符串
 
@@ -567,9 +565,9 @@ System.out.println(formatted); // 输出 123.46
 
 
 
-#### **基本类型与String之间的转换**
+### **基本类型与String之间的转换**
 
-##### **基本类型转换为String**
+#### **基本类型转换为String**
 
 基本类型转换String总共有三种方式
 
@@ -596,7 +594,7 @@ System.out.println(s3+200);//100200
 
  
 
-##### **String转换成对应的基本类型**
+#### **String转换成对应的基本类型**
 
 **包装类的parseXxx方法**
 
