--- a/Java/Java集合/6. Collections，Comparator.md
+++ b/Java/Java集合/6. Collections，Comparator.md
@@ -185,7 +185,6 @@ public class Person implements Comparable<Person>{
    ...省略
 
    //重写排序的规则
-
    @Override
    public int compareTo(Person o) {
      //return 0;//认为元素都是相同的
@@ -227,7 +226,11 @@ Comparator 是比较器接口。我们若需要控制某个类的次序，而该
 
 结果：[Student{name='杨幂', age=17}, Student{name='a迪丽热巴', age=18}, Student{name='b杨幂', age=18}, Student{name='古力娜扎', age=20}]
 
- 
+ **注意：使用排序相关方法时，必须保证排序的对象是可比较的，否则会抛出异常**
+
+
+
+
 
 ### **基本类型数组的排序**
 
