--- a/计算机基础/操作系统/进程管理.md
+++ b/计算机基础/操作系统/进程管理.md
@@ -404,7 +404,7 @@ hello
 
 这样的设计可以让父进程在子进程结束时得到子进程的状态信息，并且可以防止出现“僵尸进程”（即子进程结束后 PCB 仍然存在但父进程无法得到状态信息的情况）。
 
-- **僵尸进程**：子进程已经终止，但是其父进程仍在运行，且父进程没有调用 wait()或 waitpid()等系统调用来获取子进程的状态信息，释放子进程占用的资源，**导致子进程的 PCB 依然存在于系统中**，但无法被进一步使用。这种情况下，子进程被称为“僵尸进程”。避免僵尸进程的产生，**父进程需要及时调用 wait()或 waitpid()系统调用来回收子进程。**
+- **僵尸进程**：子进程已经终止，但是其父进程仍在运行，**且父进程没有调用 wait()或 waitpid()**等系统调用来获取子进程的状态信息，释放子进程占用的资源，**导致子进程的 PCB 依然存在于系统中**，但无法被进一步使用。这种情况下，子进程被称为“僵尸进程”。避免僵尸进程的产生，**父进程需要及时调用 wait()或 waitpid()系统调用来回收子进程。**
 - **孤儿进程**：一个进程的父进程已经终止或者不存在，但是该进程仍在运行。这种情况下，该进程就是孤儿进程。孤儿进程通常是由于父进程意外终止或未及时调用 wait()或 waitpid()等系统调用来回收子进程导致的。为了避免孤儿进程占用系统资源，操作系统会将孤儿进程的父进程设置为 init 进程（进程号为 1），由 init 进程来回收孤儿进程的资源。
 
 
