--- a/计算机基础/计算机网络/3. 网络层.md
+++ b/计算机基础/计算机网络/3. 网络层.md
@@ -42,7 +42,7 @@ IP 地址分类成了 5 种类型，分别是 A 类、B 类、C 类、D 类、E 
 
 <img src="https://cdn.xiaolincoding.com/gh/xiaolincoder/ImageHost/%E8%AE%A1%E7%AE%97%E6%9C%BA%E7%BD%91%E7%BB%9C/IP/7.jpg" alt="IP 地址分类" style="zoom:50%;" />
 
-上图中黄色部分为分类号，用以区分 IP 地址类别。
+上图中黄色部分为分类号，用以区分 IP 地址类别
 
 
 
@@ -50,7 +50,7 @@ IP 地址分类成了 5 种类型，分别是 A 类、B 类、C 类、D 类、E 
 
 **什么是 A、B、C 类地址？**
 
-其中对于 A、B、C 类主要分为两个部分，分别是**网络号和主机号**。这很好理解，好比小林是 A 小区 1 栋 101 号，你是 B 小区 1 栋 101 号。
+其中对于 A、B、C 类主要分为两个部分，分别是**网络号和主机号**。这很好理解，好比小林是 A 小区 1 栋 101 号，你是 B 小区 1 栋 101 号
 
 我们可以用下面这个表格， 就能很清楚的知道 A、B、C 分类对应的地址范围、最大主机个数。
 
