--- a/Java/Java多并发/多线程.md
+++ b/Java/Java多并发/多线程.md
@@ -1,4 +1,4 @@
-## 多线程
+## **多线程**
 
 ### **Java 线程和操作系统的线程有啥区别？**
 
@@ -34,10 +34,6 @@ JDK 1.2 之前，Java 线程是基于绿色线程（Green Threads）实现的，
 不过，这些方式其实并没有真正创建出线程。准确点来说，这些都属于是在 Java 代码中使用多线程的方法。
 
 严格来说，Java 就只有一种方式可以创建线程，那就是通过`new Thread().start()`创建。不管是哪种方式，最终还是依赖于`new Thread().start()`
-
-
-
-
 
 
 
@@ -542,7 +538,73 @@ public class Main {
 
 
 
-编写一个程序，启动三个线程，三个线程的ID分别是1，2，3；，每个线程依次打印1A,2B,3C,1D,2E,3F
+3个线程轮流打印A,B,C
+
+```java
+public class Main {
+    public static void main(String[] args) {
+
+        Print print = new Print();
+        int count = 5;
+        Thread t1 =  new Thread(()->{
+            int i = 0;
+            while (i < count){
+                i ++;
+                print.myPrint( 0);
+            }
+        });
+        Thread t2 =  new Thread(()->{
+            int i = 0;
+            while (i < count){
+                i ++;
+                print.myPrint(1);
+            }
+        });
+        Thread t3 =  new Thread(()->{
+            int i = 0;
+            while (i < count){
+                i ++;
+                print.myPrint(2);
+            }
+        });
+        t1.start();
+        t2.start();
+        t3.start();
+
+    }
+
+    public static class Print{
+        private static int turn = 0;
+        public synchronized void myPrint(int flag){
+            while (turn != flag){
+                try {
+                    this.wait();
+                } catch (InterruptedException e) {
+                    e.printStackTrace();
+                }
+            }
+            if(flag == 0){
+                System.out.println("A");
+            }else if(flag == 1){
+                System.out.println("B");
+            }else if(flag == 2){
+                System.out.println("C");
+            }
+            turn = (turn + 1) % 3;
+            this.notifyAll();
+        }
+    }
+
+}
+```
+
+
+
+
+
+
+
+编写一个程序，启动三个线程，三个线程的ID分别是1，2，3；每个线程依次打印1A,2B,3C,1D,2E,3F
 
 ```java
 public class Main {
@@ -579,7 +641,7 @@ public class Main {
                 try {
                     this.wait();
                 } catch (InterruptedException e) {
-                    throw new RuntimeException(e);
+                    e.printStackTrace();
                 }
             }
 
