--- a/计算机基础/计算机网络/4. 传输层.md
+++ b/计算机基础/计算机网络/4. 传输层.md
@@ -124,21 +124,19 @@ TCP报文首部的长度为20字节（不包括选项和填充），但可选字
 
 ### **TCP与UDP的区别**
 
-TCP面向连接（握手），UDP无连接（多播）
+**是否面向连接**：UDP 在传送数据之前不需要先建立连接。而 TCP 提供面向连接的服务，在传送数据之前必须先建立连接，数据传送结束后要释放连接。
 
-TCP可靠传输（确认，重传），UDP不可靠，出错直接丢弃数据报
+**是否是可靠传输**：远地主机在收到 UDP 报文后，不需要给出任何确认，并且不保证数据不丢失，不保证是否顺序到达。TCP 提供可靠的传输服务，TCP 在传递数据之前，会有三次握手来建立连接，而且在数据传递时，有确认、窗口、重传、拥塞控制机制。通过 TCP 连接传输的数据，无差错、不丢失、不重复、并且按序到达。
 
-TCP顺序交付（序列号），UDP无序
+**是否有状态**：这个和上面的“是否可靠传输”相对应。TCP 传输是有状态的，这个有状态说的是 TCP 会去记录自己发送消息的状态比如消息是否发送了、是否被接收了等等。为此 ，TCP 需要维持复杂的连接状态表。而 UDP 是无状态服务，简单来说就是不管发出去之后的事情了。
 
-TCP进行拥塞控制，UDP不进行拥塞控制
+**传输效率**：由于使用 TCP 进行传输的时候多了连接、确认、重传等机制，所以 TCP 的传输效率要比 UDP 低很多。
 
-TCP报文头部开销大（20字节），UDP（8字节）
+**传输形式**：TCP 是面向字节流的，UDP 是面向报文的。
 
-TCP只支持一对一通信，适合文件传输，远程登陆等可靠性要求高的应用
+**首部开销**：TCP 首部开销（20 ～ 60 字节）比 UDP 首部开销（8 字节）要大。
 
-UDP支持一对一，一对多，多对一，多对多通信，一般用于多媒体通信等可靠性要求低的应用
-
-（可靠传输，拥塞控制，首部，场景）
+**是否提供广播或多播服务**：TCP 只支持点对点通信，UDP 支持一对一、一对多、多对一、多对多；
 
 综上所述，UDP适用于实时性要求高、数据量小且频繁发送的简单应用场景，而TCP适用于可靠性要求高、顺序传输要求严格的复杂应用场景。
 
@@ -339,16 +337,23 @@ TCP的粘包问题主要有两种情况：
 
 为了解决TCP的粘包问题，可以采取以下一些常用的方法：
 
-1. **消息边界标识**
-   - 在消息中添加特定的边界标识符（如换行符、特殊字符等），接收端根据边界标识符来识别消息的边界，从而正确解析数据。
-2. **消息长度字段**
-   - 在消息头部添加一个表示消息长度的字段，接收端首先读取消息长度，然后根据消息长度来读取完整的消息内容，从而避免粘包问题。
-3. **固定长度消息**
-   - 将消息固定成固定长度的数据包，不足部分补充填充，接收端根据固定长度来解析数据，保证每个数据包都是完整的消息。
-4. **使用消息边界协议**
-   - 使用像HTTP、SMTP等协议这样的消息边界协议，它们都有自己的消息边界标识规范，可以有效地避免粘包问题。如果HTTP协议中的content-length
+**消息边界标识**
 
-<img src="https://palepics.oss-cn-guangzhou.aliyuncs.com/img/image-20240415212517779.png" alt="image-20240415212517779" style="zoom:50%;" />
+- 在消息中添加特定的边界标识符（如换行符、特殊字符等），接收端根据边界标识符来识别消息的边界，从而正确解析数据。使用像HTTP、SMTP等协议这样的消息边界协议，它们都有自己的消息边界标识规范，可以有效地避免粘包问题。如果HTTP协议中的content-length
+
+  <img src="https://palepics.oss-cn-guangzhou.aliyuncs.com/img/image-20240415212517779.png" alt="image-20240415212517779" style="zoom:50%;" />
+
+**消息长度字段**
+
+- 在消息头部添加一个表示消息长度的字段，接收端首先读取消息长度，然后根据消息长度来读取完整的消息内容，从而避免粘包问题。
+
+**固定长度消息**
+
+- 将消息固定成固定长度的数据包，不足部分补充填充，接收端根据固定长度来解析数据，保证每个数据包都是完整的消息。
+
+
+
+
 
 
 
@@ -367,6 +372,6 @@ TCP的粘包问题主要有两种情况：
 
 但我觉得，最重要的原因是，IP 层是网络层的，而 UDP 是传输层的，**到了传输层，数据包就已经不存在IP头信息了**，那么此时的UDP数据会被放在 UDP 的 Socket Buffer 中。当应用层来不及取这个 UDP 数据报，那么两个数据报在数据层面其实都是一堆 01 串。**此时读取第一个数据报的时候，会先读取到 UDP 头部**，如果这时候 UDP 头不含 UDP 长度信息，那么应用层应该取多少数据才算完整的一个数据报呢？
 
-因此 UDP 头的这个长度其实跟 TCP 为了防止粘包而在消息体里加入的边界信息是起一样的作用的。
+因此 UDP 头的这个长度其实跟 TCP 为了防止粘包而在消息体里加入的边界信息是起一样的作用的
 
 
